# sentencepiece

./: .editorconfig  .gitignore  .mise.toml  .python-version  CMakeLists.txt  MANIFEST.in  README.md  build_bundled.sh  build_sdist.sh  pyproject.toml  setup.py  taskfile.yaml
.github/workflows/: cmake.yml  cross_build.yml  wheel.yml
.github/workflows/requirements/: base.in  base.txt  cibuildwheel.in  cibuildwheel.txt
cmake/: swig.cmake
python/: CMakeLists.txt  README.md  build_bundled.sh  build_sdist.sh
python/src/sentencepiece/: __init__.py  _version.py  sentencepiece_model_pb2.py  sentencepiece_pb2.py
python/test/: sentencepiece_test.py
src/: CMakeLists.txt
