[project]
name = "sentencepiece"
dynamic = ["version"]
description = "SentencePiece python wrapper"
authors = [{ name = "Taku Kudo", email = "taku@google.com" }]
requires-python = ">=3.9"
dependencies = []
readme = "python/README.md"
license = { file = "LICENSE" }

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
homepage = "https://github.com/google/sentencepiece"

[build-system]
requires = ["setuptools>=61", "wheel", "build", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python/src/"]
include = ["python/src/sentencepiece"]

[tool.uv]
managed = true
package = true
link-mode = "copy"

[tool.cibuildwheel]
test-requires = ["pytest>=6.0"]
test-command = "pytest {project}/python/test"
skip = ["pp*", "*-musllinux_*"]
build-verbosity = 1

[tool.cibuildwheel.windows]
archs = ["auto", "ARM64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
before-build = ['cmake --version', 'git --version', 'ninja --version']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
    "-v",
    "-s",
    "--doctest-modules",
    "--cov=sentencepiece",
    "--cov-report=term-missing",
]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["python/test"]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.12", "3.11", "3.10", "3.9", "type"]
allowlist_externals = ["pytest", "mypy"]
isolated_build = true
package = "wheel"

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "Run test under {base_python}"
commands = [["pytest"]]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
description = "Run type check on code base"
commands = [["mypy", "python{/}src"], ["mypy", "python{/}test"]]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "cibuildwheel>=2.22.0",
    "cmake>=3.31.4",
    "coverage>=7.6.12",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mypy>=1.15.0",
    "ninja>=1.11.1.3",
    "pip>=25.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
    "setuptools>=75.8.0",
    "tox>=4.24.1",
    "tox-uv>=1.25.0",
    "types-protobuf>=5.29.1.20250208",
    "types-setuptools>=75.8.0.20250210",
    "wheel>=0.45.1",
]
